fix(deployment): truncate too long deployment names
Related to CAM-5473

--- a/webapps/ui/cockpit/client/styles/pages/repository.less
+++ b/webapps/ui/cockpit/client/styles/pages/repository.less
@@ -215,6 +215,8 @@ ul.deployments {
     margin-bottom: 7px;
     word-wrap: break-all;
     display: block;
+    overflow: hidden;
+    word-break: break-all;
   }
 
   dl {
